# python-entry-point-from-cpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  clang-format.html  clang-tidy.html  cppcheck.html  demo.html  diagrams_example.html  doxygen_index.html  entry_point.html  environment.yml  generate_docs.html  genindex.html  graphviz_example.html  index.html  installation.html  iwyu.html  mermaid_example.html  mypy.html  objects.inv  plantuml_example.html  proof_of_concept.html  pyproject.toml  requirements.txt  ruff.html  search.html  searchindex.js  shellcheck.html  shfmt.html  testing.html  tools.html  tox.ini
_sources/: clang-format.rst.txt  index.rst.txt  installation.rst.txt  iwyu.rst.txt  mermaid_example.rst.txt  mypy.rst.txt  plantuml_example.rst.txt  tools.rst.txt
cmake/: CompilerWarnings.cmake  PocConfig.cmake.in  Sanitizers.cmake  StaticAnalyzers.cmake  poc.pc.in
cmake/modules/: FindSphinx.cmake
docs/: CMakeLists.txt  Doxyfile.in
docs/source/: clang-tidy.rst  conf.py.in  cppcheck.rst  demo.rst  diagrams_example.rst  doxygen_index.rst  entry_point.rst  generate_docs.rst  graphviz_example.rst  index.rst  iwyu.rst  mypy.rst  proof_of_concept.rst  ruff.rst  shellcheck.rst  shfmt.rst  testing.rst  tools.rst
example-package/: pyproject.toml
example-package/src/example/: example.py
include/poc/: poc.hpp
requirements/: docs.txt  lint.txt
scripts/: publish-docs.sh
src/: CMakeLists.txt  poc.cpp
src/poc/: CMakeLists.txt  METADATA.in  RECORD.in  typing.py  version.py.in
test/: CMakeLists.txt  conftest.py  loader.cpp  test_integration.py
test/downstream/: CMakeLists.txt  README.rst  example-package  main.cpp
